Passage du site optimisé au w3c validator css htlm, correction des erreurs, et test de contrast avec outil wave google, suppression des div keywords

--- a/style.css
+++ b/style.css
@@ -149,7 +149,7 @@ a:hover {
 
 .d-bloc p a {
     font-size: 17px;
-    text-shadow: rgba(0, 0, 0, .05);
+    text-shadow: 0 0  0.5px black;
 }
 
 
@@ -365,7 +365,6 @@ a:hover {
 
 .nav>li a:hover,
 .nav>li a:focus {
-    background-color: none;
     color: #F3976C;
 }
 
@@ -964,13 +963,13 @@ textarea:focus {
     }
 }
 
-@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: landscape) {
+@media only screen and (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
     .b-parallax {
         background-attachment: scroll;
     }
 }
 
-@media only screen and (min-device-width: 1024px) and (max-device-width: 1366px) and (-webkit-min-device-pixel-ratio: 1.5) {
+@media only screen and (min-width: 1024px) and (max-width: 1366px) and (-webkit-min-device-pixel-ratio: 1.5) {
     .b-parallax {
         background-attachment: scroll;
     }
@@ -991,10 +990,6 @@ textarea:focus {
         position: relative;
     }
 
-    .bloc {
-        padding-left: constant(safe-area-inset-left);
-        padding-right: constant(safe-area-inset-right);
-    }
 
     .bloc-group,
     .bloc-group .bloc {
@@ -1005,8 +1000,6 @@ textarea:focus {
     .bloc-fill-screen .fill-bloc-top-edge,
     .bloc-fill-screen .fill-bloc-bottom-edge {
         padding: 0 20px;
-        padding-left: constant(safe-area-inset-left);
-        padding-right: constant(safe-area-inset-right);
     }
 }
 
